# neural_implicit_lab

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  neural_implicit_lab.code-workspace  objects.inv  pyproject.toml  requirements.txt  setup.py  test_queries.py
data_management/field_computations/: index.html
data_management/geometry/: index.html
data_management/point_sampling/: index.html
docs/: custom_css.css  index.md  utils.md
docs/data_management/: field_computations.md  geometry.md  point_sampler.md  point_sampling.md
docs/nn/: architectures.md  encodings.md  loading_saving_models.md
docs/queries/: queries.md  visualize.md
docs/training/: architectures.md  callbacks.md  encodings.md  loading_saving_models.md  loss_functions.md  trainer.md
docs/tutorial/: geometrical_queries.md  installation.md  loading_saving.md
examples/: extract_levelset.py  hotspot.py  implicit_surface.py  neural_pull.py  onelip_sdf.py  positional_encoding.py  siren_regression.py  thin_plate.py
implicitlab/: __init__.py  utils.py
implicitlab/data/: __init__.py  dataset.py  geometry.py  io.py  sample_utils.py  sampler.py  sampling.py  sampling_strategy.py  strategy.py  utils.py
implicitlab/queries/: __init__.py  queries.py  visualize.py
implicitlab/training/: __init__.py  callbacks.py  loss.py  losses.py
nn/architectures/: index.html
nn/encodings/: index.html
output/: model.pt  training_log.txt
queries/queries/: index.html
search/: search_index.json
tests/: test_geom_type.py  test_sampling_2d.py  test_save_load_models.py
utils/: index.html
(+43 files in other folders)
