[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "implicitlab"
version = "0.1"
authors = [
  { name="Guillaume Coiffier" },
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
"numpy",
"scipy",
"scikit-image",
"mouette",
"torch>=2.7.1",
"libigl==2.6.1",
"triangle",
"tqdm",
"deel-torchlip"
]


[project.urls]
"Homepage" = "https://github.com/GCoiffier/neural_implicit_lab"
"Documentation" = "https://github.com/GCoiffier/neural_implicit_lab"
